# plexus

./: .env  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.mjs
.github/workflows/: release.yml
src/: App.jsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/plexus/: FileExplorer.jsx  MarkdownEditor.jsx  PlexusEditor.jsx
src/components/plexus/features/: Spotify.jsx  SpotifyPlayer.jsx  SpotifyPlaylists.jsx
src/components/plexus/services/: spotifyService.js
src/components/plexus/ui/: Dropdown.jsx
src/components/ui/: sonner.tsx
src/lib/: brackets.js  suggestions.js  trie.js
src/style/: plexus.css  plexus.css.map  plexus.scss
src/style/.sass-cache/5c524bd62b160ffae416841a6b18a4c03a8bac5d/: plexus.scssc
