[package]
name = "Plexus"
version = "0.1.0"
description = "Plexus, A lightweight IDE for developers."
authors = ["Hacı Mert Gökhan"]
edition = "2021"

[lib]
name = "plexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
tauri-plugin-os = "2"
